2010-01-09 Markus Malkusch <markus@malkusch.de>

    * classes/fileIterator/AutoloaderFileIterator_PriorityList.php (AutoloaderFileIterator_PriorityList):
    The AutoloaderFileIterator_PriorityList prefers *.inc and *.php files.
    Additionally the prefered files are ordered by the Levenshtein distance to the
    class name. This is the default iterator.
    
    * classes/fileIterator/AutoloaderFileIterator_SimpleCached.php (AutoloaderFileIterator_SimpleCached):
    Once a AutoloaderFileIterator_Simple is completely iterated the found
    files are cached in an ArrayIterator.
       
    * classes/Autoloader.php (Autoloader::setPath()):
    Autoloader::setPath() became private. The path is only set by the constructor.
    If the constructor is empty, the path will be guessed.
    
2010-01-08 Markus Malkusch <markus@malkusch.de>

    * classes/AbstractAutoloader.php (AbstractAutoloader::isRegistered()):
    Using strict mode to avoid the endless recursion.
    
    * classes/Autoloader.php (Autoloader::setFileIterator()):
    The file search is using a dedicated object (AutoloaderFileIterator)
    for iterating through the filesystem. Therefore the methods addSkipPattern()
    and setSkipFilesize() are moved into the AutoloaderFileIterator class.
    
    * classes/Autoloader.php (Autoloader::setPath()):
    Throws AutoloaderException_ClassPath if realpath() fails.
    
2009-12-18 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (InternalAutoloader::remove()):
    After removing an Autoloader a previously by normalization
    removed Autoloader could become activated again.
    
2009-12-15 Markus Malkusch <markus@malkusch.de>

    * classes/InternalAutoloader.php (InternalAutoloader):
    Internal classes needed by the Autoloader itself are handled with
    the InternalAutolader.
    
    * classes/Autoloader.php (Autoloader::registerInternalClass())
    Autoloader::registerInternalClass() is deprecated and removed.